Update further reading

--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -380,7 +380,7 @@ The reference architecture uses [GitHub Actions](https://docs.github.com/en/acti
 
 ### Development actions
 
-Submitting and merging a PR triggers the following GitHub Action workflows:
+Submitting and merging a PR triggers the following GitHub Actions workflows:
 
 ```mermaid
 flowchart TB
@@ -541,8 +541,9 @@ flowchart LR
 
 ## Further reading
 
-- [Router Introduction](/router/)
-- [Enterprise Features](/router/enterprise-features)
-- [GraphOS Reporting](/router/configuration/apollo-telemetry)
-- [OpenTelemetry Tracing](/router/configuration/tracing)
+- [Apollo Router introduction](/router/)
+- [Containerizing the Apollo Router](/router/containerization/overview)
 - [Managing Apollo Router resources in Kubernetes](/technotes/TN0016-router-resource-management/)
+- [Enterprise features of the Apollo Router](/router/enterprise-features)
+- [Sending Apollo Router operation metrics to GraphOS](/router/configuration/apollo-telemetry)
+- [OpenTelemetry tracing in the Apollo Router](/router/configuration/tracing)
