--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -1,6 +1,7 @@
 ---
 title: Managing your Apollo plan
 subtitle: Understand your Apollo plan, features, and billing
+description: Learn about Apollo plans available for your organization: Serverless (Free), Serverless, Dedicated, Enterprise
 ---
 
 Every Apollo organization has an associated plan that determines which GraphOS features the organization has access to, along with how it's billed.
