--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -28,7 +28,7 @@ Apollo offers the following plans to new organizations:
 | Plan                             | Description                                                                                                                                                                                                                                                                                                |
 | -------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Serverless (Free)**            | Provides access to serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free.                                                                                                           |
-| **Serverless**                   | Removes the operation limit included in the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                              |
+| **Serverless**                   | Removes the operation limit of the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                              |
 | **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. [Get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions.                                               |
 | **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does _not_ support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials). |
 
