--- a/src/content/graphos/basics/routing/index.mdx
+++ b/src/content/graphos/basics/routing/index.mdx
@@ -55,7 +55,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-The cloud router uses the same Apollo Router binary. If you use a cloud router, you can choose run it on shared or dedicated infrastructure. Running it on dedicated infrastructure offers more configuration options. Continue reading for a detailed comparison of your router options.
+The cloud router uses the same Apollo Router binary. If you use a cloud router, you can choose to run it on shared or dedicated infrastructure. Running it on dedicated infrastructure offers more configuration options. Continue reading for a detailed comparison of your router options.
 
 <Note>
 
