Apply suggestions from code review
Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -34,8 +34,7 @@ The reference architecture consists of the following GitHub repositories:
 ## Getting started
 
 To get started with the reference architecture, begin with the README in the main [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) repository. 
-The README walks you through everything from setup to CI/CD to load testing the resulting architecture. You can utilize this page as a reference for how the architecture
-is setup.
+The README walks you through building a supergraph with the reference architecture. It gives step-by-step instructions for setup, CI/CD,  load testing, and more. This page serves as a complementary reference of the architecture's organization and configuration.
 
 ## Architecture overview
 
@@ -69,8 +68,8 @@ graph LR;
 The router also pushes performance and utilization metrics to GraphOS via Uplink so you can [analyze them in GraphOS Studio](../metrics/).
 
 ### Development environment
-The development environment consists of a the router and its subgraphs hosted in a Kubernetes cluster in either AWS or GCP. The subgraph schemas
-are pushed to Apollo GraphOS via the Schema Uplink and verified using schema checks. The resulting supergraph schema is made available to the Router. The Router reports usage metrics back to GraphOS.
+
+The development environment consists of the router and its subgraphs hosted in a Kubernetes cluster in either AWS or GCP.  GraphOS validates subgraph schemas using [schema checks](/federation/managed-federation/federated-schema-checks/) and makes them available to the router via [Uplink](/federation/managed-federation/uplink/). The router also reports usage metrics back to GraphOS.
 
 ```mermaid
 flowchart TB
@@ -110,10 +109,11 @@ flowchart TB
 ```
 
 ### Production environment
+
 The production environment is similar to the development environment with some additions. 
 
-- The router and subgraphs send their OpenTelemetry data to a collector to be viewable in Zepkin
-- The Load Testing infrastructure (K6 Load Tester, InfluxDB, Grafana) are deployed. K6 is configured to send traffic to the router.
+- The router and subgraphs send their OpenTelemetry data to a collector. You can then view the data in Zipkin.
+- A K6 load tester sends traffic to the router and stores load test results in InfluxDB for viewing in Grafana.
 
 ```mermaid
 flowchart TB
@@ -171,7 +171,7 @@ flowchart TB
 
 ## Components
 
-This section will summarize the various services and runtimess that make up the architecture. This includes the router, subgraphs, OpenTelemetry, Zipkin, K6, and Grafana.
+This section summarizes the various services and runtimes that make up the reference architecture. This includes the router, subgraphs, OpenTelemetry, Zipkin, K6, and Grafana.
 
 ### Router
 
@@ -424,7 +424,7 @@ flowchart TB
 
 ### Production deploy
 
-You must manually trigger production deployments with GitHub Actions.
+When you manually trigger a production deployment, GitHub Actions publish schema updates to Uplink and GraphOS validates them using schema checks before making them available to the router.
 
 ```mermaid
 flowchart TB
@@ -480,7 +480,7 @@ flowchart LR
   trigger(["Trigger Deployment"])
 
   subgraph githubactions["GitHub Actions"]
-    deploy["Job: Deploy OTEL"]
+    deploy["Job: Deploy OTel"]
   end
 
   subgraph cluster["Production Cluster"]
@@ -554,6 +554,6 @@ flowchart LR
 - [Apollo Router introduction](/router/)
 - [Containerizing the Apollo Router](/router/containerization/overview)
 - [Managing Apollo Router resources in Kubernetes](/technotes/TN0016-router-resource-management/)
-- [Enterprise features of the Apollo Router](/router/enterprise-features)
 - [Sending Apollo Router operation metrics to GraphOS](/router/configuration/apollo-telemetry)
 - [OpenTelemetry tracing in the Apollo Router](/router/configuration/tracing)
+- [Enterprise features of the Apollo Router](/router/enterprise-features)
